--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-midnight
+#theme: jekyll-theme-midnight
 title: Thornska's homepage
 description: This is a test
+remote_theme: b2a3e8/jekyll-theme-console
