--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Thornska's homepage
 description: This is a test
 #theme: jekyll-theme-midnight
 #remote_theme: b2a3e8/jekyll-theme-console
-remote_thene: Arxero/darlog
+remote_thene: cotes2020/jekyll-theme-chirpy
