--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Thornska's homepage
 description: This is a test
-#theme: jekyll-theme-midnight
+theme: jekyll-theme-midnight
 #remote_theme: b2a3e8/jekyll-theme-console
-remote_thene: cotes2020/jekyll-theme-chirpy
